change index.html h1 and description

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
 
   <h1>
-    Utility per la creazione di immagini di copertina (Beta).
+    Unifi Cover Cropper (Beta)
   </h1>
   <p>
-    Siti dipartimenti unifi.it |
+    Utility per la creazione di immagini di copertina per i siti dei dipartimenti di <a href="http://www.unifi.it">unifi.it</a> <br>
     Output richiesto: jpg 1920x654px &lt;300kb
   </p>
   <hr>
