--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
   <title>UNIFI COVER CROPPER</title>
 
 
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.6/cropper.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.6/cropper.min.js"></script>
 
 
   <style>
-    .flex {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
+    /* LAYOUT */
 
     /* questo è richiesto da cropperJS */
     img.cropper {
@@ -23,15 +20,18 @@
       max-width: 100%;
     }
 
+    .flex {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .wrapper {
+      margin: 20px
+    }
+
     div.cropper-container {
       max-width: 500px;
     }
-
-
-    #anteprima_wrapper {
-      margin: 80px 20px;
-    }
-
 
     img.preview {
       height: 200px;
@@ -69,10 +69,35 @@
       color: red;
     }
 
-    #alert, #download_link {
+    #alert,
+    #download_link {
       display: none;
     }
 
+    </style>
+
+
+    <!-- GRAPHIC STYLES -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" rel="stylesheet">
+    <style>
+
+    img {
+      max-width: none;
+    }
+
+    .button.button-outline {
+      color: black;
+      border-color: black;
+      font-size: .8rem;
+      height: 2.8rem;
+      line-height: 2.8rem;
+      padding: 0 1.5rem;
+    }
+
+    a,
+    a:visited {
+      color: blue;
+    }
   </style>
 
 </head>
@@ -86,15 +111,29 @@
 
 
 
+  <div class="wrapper">
 
-  <h1>
-    Unifi Cover Cropper (Beta)
-  </h1>
-  <p>
-    Utility per la creazione di immagini di copertina per i siti dei dipartimenti di <a href="http://www.unifi.it">unifi.it</a> <br>
-    Output richiesto: jpg 1920x654px &lt;300kb
-  </p>
-  <hr>
+    <h1>
+      Unifi Cover Cropper (Beta)
+    </h1>
+    <p>
+      Utility per la creazione di immagini di copertina per i siti dei dipartimenti di <a href="http://www.unifi.it">unifi.it</a> <br>
+      (output richiesto: jpg 1920x654px &lt;300kb)
+    </p>
+    <hr>
+
+
+    <p>
+
+      Scegliere un'immagine di prova:
+      <button id="img_uno" class="button button-outline">UNO</button>
+      <button id="img_due" class="button button-outline">DUE</button>
+      <button id="img_tre" class="button button-outline">TRE</button>
+
+      &nbsp oppure caricare un'immagine: <input id="image_loader" type=file>
+    </p>
+
+  </div>
 
 
 
@@ -104,23 +143,14 @@
   <div class="flex">
 
     <div class="wrapper" id="cropper_wrapper">
-      <p>
-
-        Scegliere un'immagine di prova:
-        <button id="img_uno">UNO</button>
-        <button id="img_due">DUE</button>
-        <button id="img_tre">TRE</button>
-        <br>
-        O caricare un'immagine: <input id="image_loader" type=file>
-      </p>
-
       <div class="cropper-container">
         <img class="cropper" id="image" src="sample_uno.jpg">
       </div>
       <p>
         Risoluzione origine: <span id="info"> </span> &nbsp
+        <br>
         <a href="#" id="download_link" download="cropped.jpg">SCARICA IMMAGINE RITAGLIATA</a>
-      <span id="alert">RISOLUZIONE TROPPO BASSA</span>
+        <span id="alert">RISOLUZIONE TROPPO BASSA</span>
     </div>
 
     <div class="wrapper" id="anteprima_wrapper">
@@ -199,7 +229,7 @@
 
       const doCrop = function() {
         document.querySelector("#alert").style.display = "none";
-        download_link.style.display  = "none";
+        download_link.style.display = "none";
 
         let data = cropper.getData(true);
         document.querySelector("#info").innerHTML = data.width + "x" + data.height + "px";
