more style adjustments

--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
     #download_link {
       display: none;
     }
+  </style>
 
-    </style>
 
-
-    <!-- GRAPHIC STYLES -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" rel="stylesheet">
-    <style>
-
+  <!-- GRAPHIC STYLES -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" rel="stylesheet">
+  <style>
     img {
       max-width: none;
     }
@@ -122,53 +120,57 @@
     </p>
     <hr>
 
-
-    <p>
-
-      Scegliere un'immagine di prova:
-      <button id="img_uno" class="button button-outline">UNO</button>
-      <button id="img_due" class="button button-outline">DUE</button>
-      <button id="img_tre" class="button button-outline">TRE</button>
-
-      &nbsp oppure caricare un'immagine: <input id="image_loader" type=file>
-    </p>
-
+    <div class="flex">
+      <div>
+        <p>
+          Scegliere un'immagine di prova:
+          <button id="img_uno" class="button button-outline">UNO</button>
+          <button id="img_due" class="button button-outline">DUE</button>
+          <button id="img_tre" class="button button-outline">TRE</button>
+          &nbsp
+      </div>
+      <div>
+        oppure caricare un'immagine: <input id="image_loader" type=file>
+        </p>
+      </div>
+    </div>
   </div>
 
 
 
 
-  <!-- Wrap the image or canvas element with a block element (container) -->
+    <!-- Wrap the image or canvas element with a block element (container) -->
 
-  <div class="flex">
+    <div class="flex">
 
-    <div class="wrapper" id="cropper_wrapper">
-      <div class="cropper-container">
-        <img class="cropper" id="image" src="sample_uno.jpg">
+      <div class="wrapper" id="cropper_wrapper">
+        <div class="cropper-container">
+          <img class="cropper" id="image" src="sample_uno.jpg">
+        </div>
+        <p>
+          Risoluzione origine: <span id="info"> </span> &nbsp
+          <br>
+          <a href="#" id="download_link" download="cropped.jpg">SCARICA IMMAGINE RITAGLIATA</a>
+          <span id="alert">RISOLUZIONE TROPPO BASSA</span>
       </div>
-      <p>
-        Risoluzione origine: <span id="info"> </span> &nbsp
-        <br>
-        <a href="#" id="download_link" download="cropped.jpg">SCARICA IMMAGINE RITAGLIATA</a>
-        <span id="alert">RISOLUZIONE TROPPO BASSA</span>
-    </div>
 
-    <div class="wrapper" id="anteprima_wrapper">
+      <div class="wrapper" id="anteprima_wrapper">
 
-      <div class="preview-container">
-        <img class="preview" id="result"><br>
-      </div>
-      <p> anteprima versione desktop</p>
+        <div class="preview-container">
+          <img class="preview" id="result"><br>
+        </div>
+        <p> anteprima versione desktop</p>
 
 
-      <div class="preview-container">
-        <img class="preview" id="result_mobile">
-        <div class="mask" id="left-mask"></div>
-        <div class="mask" id="right-mask"></div>
-      </div>
-      <p> anteprima versione mobile</p>
+        <div class="preview-container">
+          <img class="preview" id="result_mobile">
+          <div class="mask" id="left-mask"></div>
+          <div class="mask" id="right-mask"></div>
+        </div>
+        <p> anteprima versione mobile</p>
 
 
+      </div> 
     </div> <!-- flexbox container -->
 
 
@@ -180,79 +182,79 @@
 
 
 
-    <script>
-      // import 'cropperjs/dist/cropper.css';
+      <script>
+        // import 'cropperjs/dist/cropper.css';
 
-      const image_loader = document.querySelector('#image_loader')
-      const image = document.querySelector('#image')
-      const preview = document.querySelector('#preview')
-      const result = document.querySelector('#result')
-      const result_mobile = document.querySelector('#result_mobile')
-      const download_link = document.querySelector('#download_link')
+        const image_loader = document.querySelector('#image_loader')
+        const image = document.querySelector('#image')
+        const preview = document.querySelector('#preview')
+        const result = document.querySelector('#result')
+        const result_mobile = document.querySelector('#result_mobile')
+        const download_link = document.querySelector('#download_link')
 
-      document.querySelector('#img_uno').addEventListener('click', function() {
-        let url = "sample_uno.jpg";
-        cropper.replace(url);
-      });
-      document.querySelector('#img_due').addEventListener('click', function() {
-        let url = "sample_due.jpg";
-        cropper.replace(url);
-      });
-      document.querySelector('#img_tre').addEventListener('click', function() {
-        let url = "sample_tre.jpg";
-        cropper.replace(url);
-      });
+        document.querySelector('#img_uno').addEventListener('click', function() {
+          let url = "sample_uno.jpg";
+          cropper.replace(url);
+        });
+        document.querySelector('#img_due').addEventListener('click', function() {
+          let url = "sample_due.jpg";
+          cropper.replace(url);
+        });
+        document.querySelector('#img_tre').addEventListener('click', function() {
+          let url = "sample_tre.jpg";
+          cropper.replace(url);
+        });
 
-      image_loader.addEventListener('change', function() {
-        let file = image_loader.files[0];
-        let url = URL.createObjectURL(file);
-        cropper.replace(url);
-      });
+        image_loader.addEventListener('change', function() {
+          let file = image_loader.files[0];
+          let url = URL.createObjectURL(file);
+          cropper.replace(url);
+        });
 
-      const cropper = new Cropper(image, {
-        aspectRatio: 1920 / 654, // size of output image
-        viewMode: 1, // restricts crop area to image area
-        preview: preview,
-        autoCropArea: 1,
-        movable: false,
-        zoomable: false,
-        toggleDragModeOnDblclick: false,
+        const cropper = new Cropper(image, {
+          aspectRatio: 1920 / 654, // size of output image
+          viewMode: 1, // restricts crop area to image area
+          preview: preview,
+          autoCropArea: 1,
+          movable: false,
+          zoomable: false,
+          toggleDragModeOnDblclick: false,
 
 
-        crop(event) {
-          console.log(event.detail.width);
-          console.log(event.detail.height);
-          clearTimeout();
-          setTimeout(doCrop, 500);
-        },
-      });
+          crop(event) {
+            console.log(event.detail.width);
+            console.log(event.detail.height);
+            clearTimeout();
+            setTimeout(doCrop, 500);
+          },
+        });
 
-      const doCrop = function() {
-        document.querySelector("#alert").style.display = "none";
-        download_link.style.display = "none";
+        const doCrop = function() {
+          document.querySelector("#alert").style.display = "none";
+          download_link.style.display = "none";
 
-        let data = cropper.getData(true);
-        document.querySelector("#info").innerHTML = data.width + "x" + data.height + "px";
+          let data = cropper.getData(true);
+          document.querySelector("#info").innerHTML = data.width + "x" + data.height + "px";
 
-        if (data.width < 1700) {
-          document.querySelector("#alert").style.display = "inline";
-        } else {
-          download_link.style.display = "inline";
+          if (data.width < 1700) {
+            document.querySelector("#alert").style.display = "inline";
+          } else {
+            download_link.style.display = "inline";
+          }
+
+          let blob = cropper.getCroppedCanvas({
+            // options
+            maxWidth: 1920
+          }).toBlob(function(blob) {
+              url = URL.createObjectURL(blob);
+              result.src = url;
+              result_mobile.src = url;
+              download_link.href = url;
+            }, 'image/jpeg', 0.7 // image type and quality
+          );
+
         }
-
-        let blob = cropper.getCroppedCanvas({
-          // options
-          maxWidth: 1920
-        }).toBlob(function(blob) {
-            url = URL.createObjectURL(blob);
-            result.src = url;
-            result_mobile.src = url;
-            download_link.href = url;
-          }, 'image/jpeg', 0.7 // image type and quality
-        );
-
-      }
-    </script>
+      </script>
 
 </body>
 
