--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div>
         <p>
           Try with a test image:
-          <button id="img_uno" class="button button-outline">Seaside</button>
+          <button id="img_uno" class="button button-outline">Biscuits</button>
           <button id="img_due" class="button button-outline">Road</button>
           <button id="img_tre" class="button button-outline">Butterfly</button>
           &nbsp
